LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/ET.org
+++ b/ET.org
@@ -2,6 +2,7 @@
 #+title: ET 框架学习笔记－－自己需要这样一个总结文档来帮助总结与急速重构自己的游戏 
 #+author: deepwaterooo 
 
+
 * 客户端场景组件：客户端大致的起始过程
 ** Entry.cs: 指定的起始类，会触发三类回调，公用组件类的加载，和其它
    #+BEGIN_SRC csharp
@@ -1387,6 +1388,7 @@ public static class SceneFactory {
 }
    #+END_SRC
 
+
 * IMHandler 接口实现的各种类型消息处理器：需要先理解透彻ETTask 和 ETVoid:
 - 这个模块感觉还没有总结完。但因为还有111 个编译错误，很多我还不知道算是怎么回事。这个版块的总结放在后面，再改错误的时候带着问题来看更有效率。
 - 可以回去参考前一个游戏参考过的ET-EUI 里有一部分ETVoid 的相关使用，可以用作自己理解 ETTask ETVoid 的源码参考。ET-EUI 现笔记本里没有，可以拉一个下来。
@@ -1699,6 +1701,7 @@ public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHa
 ** ActorHandleHelper 静态帮助类：包装了必要的方法，帮助自动化回复相关回调消息 et3
 - 再后面的，MessageDispatcherComponent 相关的，因为网络部分的再次总结一遍，移过去，先系统总结一下。改天有必要的时候，再作修改。
 
+
 * ResourcesComponent 资源包管理器相关：有时候，拖拉机游戏里会需要拿它来加载图片
 ** ResourcesComponent: 同文件有其生成系
    #+BEGIN_SRC csharp
@@ -1792,8 +1795,15 @@ public class GetAllConfigBytes: AInvokeHandler<ConfigComponent.GetAllConfigBytes
 - 多进程多scene，具体scene放到那个进程完全取决于配制，全放到一个进程就是allserver了
 - 如果是个很大的scene，需要容纳很多人，可能就需要单独占用一个进程，这样才能完全利用一个核
 - 把每个scene都分配一个进程，就跟5.0差不多了
+
+
 * Coroutine 锁之类的相关总结：【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
-- 整个框架，各种锁，还不曾真正读过，所以这里再看一下，总结一下遇见过的必要的。半小时到一小时的时间，简单快速地再翻一遍。以前读过，只是没作笔记，部分细节点不理解找出来，记下。
+- 这个模块，现在再看，这里、这个章节里，被总结得乱七八糟。但现在因为真正读懂看懂，暂时不更改更新这个模块，继续去看其它自己不曾弄懂的。等31 号搬进新住处后，会把重构游戏编译错误继续改完、重构好。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 【锁的两套机制：】主要是【创建】与【回收】。
+- *【CoroutineLockComponent单例组件】* 模块用到，两种类型的锁：【异步共享资源异步等待锁】＋【共享资源独占锁】
+- 【异步共享资源异步等待锁】：框架里，帮助实现，对异步共享资源的，自动挂号排队站队，作为中介帮助调用方拿到可以持有共享资源的【独占锁】
+- 【共享资源独占锁】：最基本的，实现对多进程、多线程？共享资源的安全保护，尤其是写数据安全保护
+- 【协程锁组件】单例类，Update() 更新回调实现
 - 重构后的模块，是单例类管理组件，不同于框架里其它组件，热更域里自带生成系或说更新系。它是单例，是定义死了的。【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！活宝妹还没能嫁给亲爱的表哥，就时间停止，世界不转，直到活宝妹可以嫁给亲爱的表哥的这一天！！】
 ** CoroutineLockType: 静态类定义的几种类型
 - 就是定义框架中用到的几种使用协程锁的情境，分成几种不同的类型
